# app.js
@@ -6,11 +6,16 @@ const usersRouter = require('./controllers/users')
 const loginRouter = require('./controllers/login')
 const stationsRouter = require('./controllers/stations')
 const routesRouter = require('./controllers/routes')
+const vehiclesRouter = require('./controllers/vehicles')
+const maintenancesRouter = require('./controllers/maintenances')
+const schedulesRouter = require('./controllers/schedules')
 const middleware = require('./utils/middleware')
 const logger = require('./utils/logger')
 const mongoose = require('mongoose')
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+
+
 
 
 logger.info('connecting to', config.MONGODB_URI)
@@ -34,6 +39,10 @@ app.use('/api/users', usersRouter)
 app.use('/api/login', loginRouter)
 app.use('/api/stations', stationsRouter)
 app.use('/api/routes', routesRouter)
+app.use('/api/vehicles', vehiclesRouter)
+app.use('/api/maintenances', maintenancesRouter)
+app.use('/api/schedules', schedulesRouter)
+
 
 app.use(middleware.unknownEndpoint)
 app.use(middleware.errorHandler)
